--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -24,6 +24,9 @@ server {
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
 
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+
+
     location / {
         proxy_pass http://web:3000;
         proxy_http_version 1.1;
@@ -48,14 +51,20 @@ server {
 
     client_max_body_size 5120M;
 
-    # อนุญาตเฉพาะ /api/upload
     location = /api/upload {
         proxy_pass http://web:3000;
-        proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # บล็อก Origin ที่ไม่ใช่ clustra.tech
+        if ($http_origin !~* ^https://(clustra\.tech|upload\.clustra\.tech)$) {
+            return 403;
+        }
     }
 
     # บล็อกเส้นทางอื่นทั้งหมด
