--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -51,7 +51,7 @@ server {
 
     client_max_body_size 5120M;
 
-    location = /api/upload {
+    location = / {
         proxy_pass http://web:3000;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -63,12 +63,7 @@ server {
 
         # บล็อก Origin ที่ไม่ใช่ clustra.tech
         if ($http_origin !~* ^https://(clustra\.tech|upload\.clustra\.tech)$) {
-            return 403;
+            return 301 https://clustra.tech$request_uri;
         }
-    }
-
-    # บล็อกเส้นทางอื่นทั้งหมด
-    location / {
-        return 301 https://clustra.tech$request_uri;
     }
 }
