--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,9 @@ services:
     depends_on:
       - web
     restart: always
+    networks:
+      - macvlan_network:
+          ipv4_address: 192.168.1.97
 
   certbot:
     image: certbot/dns-cloudflare
@@ -84,6 +87,10 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+
+networks:
+  macvlan_network:
+    external: true
 
 volumes:
   pgdata:
