--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
     restart: always
     networks:
       - macvlan_network:
-          ipv4_address: '192.168.1.97'
+          ipv4_address: "192.168.1.97"
 
   certbot:
     image: certbot/dns-cloudflare
