--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -28,7 +28,7 @@ server {
 
 
     location / {
-        proxy_pass http://web:3000;
+        proxy_pass http://192.168.1.45:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -52,7 +52,7 @@ server {
     client_max_body_size 5120M;
 
     location = /api/upload {
-        proxy_pass http://web:3000;
+        proxy_pass http://192.168.1.45:3000;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
