--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,35 +9,19 @@ services:
       - DATABASE_URL=${DATABASE_URL}
       - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
       - NEXT_PUBLIC_APP_URL=${NEXT_PUBLIC_APP_URL}
-      - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY}
-      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-      - AWS_BUCKET_NAME=${AWS_BUCKET_NAME}
-      - AWS_REGION=${AWS_REGION}
-      - CLOUDFRONT_DOMAIN=${CLOUDFRONT_DOMAIN}
-      - CLOUDFRONT_DISTRIBUTION_ID=${CLOUDFRONT_DISTRIBUTION_ID}
-      - CLOUDFRONT_KEY_PAIR_ID=${CLOUDFRONT_KEY_PAIR_ID}
-      - CLOUDFRONT_PRIVATE_KEY=${CLOUDFRONT_PRIVATE_KEY}
-      - CLOUDFRONT_RESPONSE_HEADERS_POLICY_ID=${CLOUDFRONT_RESPONSE_HEADERS_POLICY_ID}
-      - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-      - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - NEXTAUTH_URL=${NEXTAUTH_URL}
-      - NEXTAUTH_SECRET=${NEXTAUTH_SECRET}
-      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
-      - STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
-      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
-      - STRIPE_MONTHLY_PRICE_ID=${STRIPE_MONTHLY_PRICE_ID}
-      - STRIPE_ANNUAL_PRICE_ID=${STRIPE_ANNUAL_PRICE_ID}
     depends_on:
       db:
         condition: service_healthy
     restart: unless-stopped
+    networks:
+      macvlan_network:
+        ipv4_address: 192.168.1.98  # IP ของ Web App (ต้องอยู่ในเครือข่ายเดียวกับ Nginx)
 
   nginx:
     image: nginx:latest
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf  # ไฟล์หลัก nginx.conf
-      - ./nginx/conf.d:/etc/nginx/conf.d          # Mount ทั้ง directory conf.d
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/conf.d:/etc/nginx/conf.d
       - ./nginx/certbot:/etc/letsencrypt
       - ./nginx/www:/usr/share/nginx/html
     ports:
@@ -48,7 +32,7 @@ services:
     restart: always
     networks:
       macvlan_network:
-          ipv4_address: 192.168.1.97
+        ipv4_address: 192.168.1.97  # IP ของ Nginx (Gateway ของ Network นี้)
 
   certbot:
     image: certbot/dns-cloudflare
@@ -71,6 +55,8 @@ services:
       done'
     depends_on:
       - nginx
+    networks:
+      - macvlan_network
 
   db:
     image: postgres:13
@@ -87,6 +73,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - macvlan_network
 
 networks:
   macvlan_network:
