--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
-    listen 80;
-    listen [::]:80;
+    listen 90;
+    listen [::]:90;
     server_name clustra.tech;
 
     location /.well-known/acme-challenge/ {
@@ -13,8 +13,8 @@ server {
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 444 ssl;
+    listen [::]:444 ssl;
     http2 on;
     server_name clustra.tech;
 
@@ -26,9 +26,8 @@ server {
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-
     location / {
-        proxy_pass http://192.168.1.98:3000;
+        proxy_pass http://web:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -41,8 +40,8 @@ server {
 }
 
 server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+    listen 444 ssl;
+    listen [::]:444 ssl;
     http2 on;
     server_name upload.clustra.tech;
 
@@ -52,7 +51,7 @@ server {
     client_max_body_size 5120M;
 
     location = /api/upload {
-        proxy_pass http://192.168.1.98:3000;
+        proxy_pass http://web:3000;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
