--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     depends_on:
       - web
     restart: always
-
+    
   certbot:
     image: certbot/dns-cloudflare
     volumes:
@@ -43,7 +43,7 @@ services:
       /bin/sh -c 'apk add --no-cache docker-cli
       trap "exit 0" TERM
       while :; do
-        certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --quiet
+        certbot renew --dns-cloudflare --dns-cloudflare-credentials /root/.secrets/cloudflare.ini --preferred-challenges dns --quiet
         docker exec $$(docker ps -q -f name=nginx) nginx -s reload
         sleep 3d & wait $$!
       done'
